# verbatim

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  20260515 PRD Template.docx  BOOTSTRAPPING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_IDEAS.md  LICENSE  MULTI_AGENT_PLAN.md  README.md  SECURITY.md  TEST_PLAN.md  TODO.md  Verbatim PRD.docx  antigravity-day3-prompt.md  brand_guidelines.json  brand_guidelines.py  demo_evaluator.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.knowledge-base/: README.md
.knowledge-base/anthropic-api/: MAP.md  messages.md
.knowledge-base/google-docs-api/: MAP.md  concept-document-structure.md  concept-indices-and-ranges.md  resource-documents.md
.knowledge-base/google-drive-api/: MAP.md  resource-comments.md  resource-files.md  resource-permissions.md
.knowledge-base/google-oauth2-api/: MAP.md  resource-tokeninfo.md
.knowledge-base/google-workspace-addons/: MAP.md  concept-appsscript-manifest.md  concept-cardservice-ui.md  concept-oauth-scopes-and-triggers.md  concept-urlfetchapp.md
.knowledge-base/openrouter-api/: MAP.md  completions.md
addon/: Backend.gs  Code.gs  README.md  appsscript.json
docs/: Marketing Role Research Notes_ Automated Copy Review.docx  Multi-Agent Category Split PRD.docx  PRD.snapshot.md  multi-agent-prd.snapshot.md  research-notes.snapshot.md  workspace-addon-migration.md
presentation/: PRESENTATION_PLAN.md  PRESENTATION_PLAN_WEEK2.md  build_deck.py  build_deck_week2.py  deck_common.py  verify_deck.py  verify_deck_week2.py
presentation/demo/: campaign-brief-adversarial.txt  campaign-brief-cta.txt  campaign-brief-golden-edge.txt  campaign-brief-golden.txt  campaign-brief-mixed.txt  campaign-brief-order.txt  campaign-brief.txt  comment-triggers-expected-output.md  draft-copy-adversarial.txt  draft-copy-cta.txt  draft-copy-golden-edge.txt  draft-copy-golden.txt  draft-copy-mixed.txt  draft-copy-order.txt  draft-copy.txt  eval-card-expected-output.md  (+1 more)
tests/: test_agent.py  test_brand_guidelines.py  test_cli.py  test_docs_client.py  test_evaluator.py  test_http_api.py  test_llm_client.py  test_orchestrator.py  test_prompt.py  test_prompts_line_editor.py  test_prompts_shared.py  test_prompts_structural.py  test_token_validator.py  test_version.py
(+17 files in other folders)
