[project]
name = "verbatim"
version = "0.15.1"
description = "An AI agent that audits marketing copy in Google Docs against brand guidelines and campaign briefs."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Karl Johnson" },
    { name = "Christina Ruiz" },
]
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.121.2",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
verbatim = "verbatim.cli:main"
verbatim-server = "verbatim.http_api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verbatim"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "commitizen",
    "mdformat",
    "mdformat-gfm",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "D", "RUF"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
# One-off deck-generation script: no docstring obligation, and speaker-script
# text is transcribed verbatim (smart quotes/em-dashes intentional, not typos).
"presentation/*.py" = ["D", "RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "google.oauth2.*",
    "google.auth.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/verbatim --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
source = ["src/verbatim"]
branch = true
omit = ["src/verbatim/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_provider = "pep621"
version_scheme = "semver"
update_changelog_on_bump = true
tag_format = "v$version"
major_version_zero = true
